# telemetrygen-operators

./: .gitignore  prompts
.agents/skills/grill-me/: SKILL.md
.claude/agents/: engineering-charm-architect.md
.opencode/agents/: charm-architect.md
telemetrygen-k8s/: .coverage  HANDOFF.md  README.md  charmcraft.yaml  pyproject.toml  requirements.txt  tox.ini  unit.requirements.txt
telemetrygen-k8s/src/: charm.py
telemetrygen-k8s/tests/integration/: .test_integration.py.swp  conftest.py  helpers.py  test_happy_path.py  test_integration.py  test_invalid_config.py  test_relation_departed.py  test_signal_switch.py
telemetrygen-k8s/tests/integration/features/: happy_path.feature  invalid_config.feature  relation_departed.feature  signal_switch.feature
telemetrygen-k8s/tests/unit/: test_charm.py
