# Copyright 2026 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "telemetrygen-k8s"
version = "0.0"
requires-python = "~=3.12"

dependencies = [
    "ops>=3.1,<3.2",
    "pydantic>=2,<3",
    "cosl>=1.0",
    "charmlibs-interfaces-otlp>=0.5,<0.6",
    "charmed-service-mesh-helpers>=0.2.0",
    "lightkube-extensions",
]

[project.optional-dependencies]
dev = [
    # Linting / formatting
    "ruff",
    "codespell",
    # Static analysis
    "pyright",
    # Unit tests
    "pytest",
    "coverage[toml]",
    "ops[testing]",
    # Integration tests
    "jubilant",
    "pytest-jubilant>=2,<3",
    "pytest-bdd",
    "tenacity",
    # Interface tests
    "pytest-interface-tester",
]

[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info", "lib"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D401",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
ignore = ["E501", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src"]
extraPaths = ["lib"]
pythonVersion = "3.12"
pythonPlatform = "Linux"
reportMissingImports = "warning"
reportMissingTypeStubs = false

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 90
omit = [
    "lib/charms/*",
    "lib/charms/**/*",
    "tests/*",
    "tests/**/*",
]

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
log_cli_level = "INFO"
